点赞等功能与用户关联起来

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -136,6 +136,7 @@
                         password: $scope.password
                     }).success(function (data) {
                     if (data.code) {
+                        localStorage.setItem("vfUserId", data.data);
                         if ($scope.needBack) {
                             location.href = $scope.backUrl;
                         } else {
