--- a/src/main/resources/templates/article/detail.html
+++ b/src/main/resources/templates/article/detail.html
@@ -165,15 +165,17 @@
 <script type="text/javascript" th:inline="javascript">
     var voteApp = angular.module('voteApp', []);
     voteApp.controller('voteController', function ($scope, $http, $location) {
+        var vfUserId = localStorage.getItem('vfUserId') || -1;
         var targetId = [[${form.id}]];
         $scope.vote = [[${form.vote}]] || 0;
-        $scope.voted = localStorage.getItem('article_' + targetId) == 'true' ? true : false;
+        $scope.
+        $scope.voted = localStorage.getItem('article_' + vfUserId + '_' + targetId) == 'true' ? true : false;
         $scope.doVote = function () {
             if (!$scope.voted) {
                 $http.post('/article/vote/'+targetId).success(function (data) {
                     if(data.code) {
                         $scope.vote = data.data.vote;
-                        localStorage.setItem('article_' + targetId, 'true');
+                        localStorage.setItem('article_' + vfUserId + '_' + targetId, 'true');
                         $scope.voted = true;
                     }else {
                         Tooltip.fail(data.msg);
@@ -185,6 +187,7 @@
 
     var commentApp = angular.module('commentApp', []);
     commentApp.controller('commentController', function ($scope, $http, $location) {
+        var vfUserId = localStorage.getItem('vfUserId') || -1;
         $scope.comments = [];
         var targetId = [[${form.id}]];
         var targetType = 'ARTICLE';
@@ -259,18 +262,18 @@
         };
 
         $scope.verifyCommentVote = function (commentId) {
-            return window.localStorage.getItem('comment_' + commentId);
+            return window.localStorage.getItem('comment_' + vfUserId + '_' + commentId);
         };
 
         $scope.verifyReplyVote = function (replyId) {
-            return window.localStorage.getItem('reply_' + replyId);
+            return window.localStorage.getItem('reply_' + vfUserId + '_' + replyId);
         };
 
         $scope.voteComment = function (comment) {
             $http.post('/comment/vote/' + comment.id).success(function (data) {
                 if (data.code) {
                     comment.vote = data.data.vote;
-                    window.localStorage.setItem('comment_' + comment.id, true);
+                    window.localStorage.setItem('comment_' + vfUserId + '_' + comment.id, true);
                 } else {
                     Tooltip.fail(data.msg);
                 }
@@ -281,7 +284,7 @@
             $http.post('/reply/vote/' + reply.id).success(function (data) {
                 if (data.code) {
                     reply.vote = data.data.vote;
-                    window.localStorage.setItem('reply_' + reply.id, true);
+                    window.localStorage.setItem('reply_' + vfUserId + '_' + reply.id, true);
                 } else {
                     Tooltip.fail(data.msg);
                 }
