--- a/src/main/resources/templates/story/userList.html
+++ b/src/main/resources/templates/story/userList.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>我的故事</title>
     <style type="text/css">
         .card-block .remove{
             display: none;
