--- a/src/main/resources/templates/user/info.html
+++ b/src/main/resources/templates/user/info.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>用户信息</title>
     <link rel="stylesheet" type="text/css" href="/static/css/webuploader.css">
     <style type="text/css">
         .webuploader-pick {
