--- a/src/main/resources/templates/user/password.html
+++ b/src/main/resources/templates/user/password.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>密码修改</title>
    </head>
 <body>
 <div class="container">
