--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -13,6 +13,7 @@
 .width400{width: 40em;}
 .width500{width: 50em;}
 .width550{width: 55em;}
+.width600{width: 60em;}
 .width650{width: 65em;}
 .width700{width: 70em;}
 .maxWidth100{max-width: 10em !important;}
